[tool.poetry]
name = "aoc24"
version = "0.1.0"
description = ""
authors = ["jonathansickert <sickert.jonathan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
ruff = "^0.8.3"
mypy = "^1.13.0"
scipy = "^1.14.1"
z3-solver = "^4.13.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
